syntax = "proto3";

package com.github.fckng0d.s3service;

option java_multiple_files = true;
option java_package = "com.github.fckng0d.grpc.s3service";
option java_outer_classname = "S3ServiceProto";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

// Сервис для AWS S3
service S3Service {
  // Загрузка файла в S3
  rpc UploadFile(UploadFileRequest) returns (FileUrlResponse);
  // Получение файла из S3
  rpc GetFile(FileUrlRequest) returns (FileDataResponse);
  // Удаление файла из S3
  rpc DeleteFile(FileUrlRequest) returns (google.protobuf.Empty);
}
message UploadFileRequest {
  string folder_name = 1;
  string file_name = 2;
  bytes file_data = 3;
}

message FileUrlRequest {
  string fileUrl = 1;
}

message FileUrlResponse {
  string fileUrl = 1;
}

message FileDataResponse {
  bytes fileData = 1;
}